fixed margin that was too large

--- a/src/styles/partials/components/_step-list.scss
+++ b/src/styles/partials/components/_step-list.scss
@@ -12,6 +12,7 @@
   counter-reset: my-awesome-counter;
   list-style: none;
   padding-left: 60px;
+  margin-top: 0;
 }
 
 .dg_step-list__list > li {
